--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Welcome to Hacking with Spring Boot!</h1>
+    <!-- tag::1[] -->
     <h2>Inventory Management</h2>
     <table>
         <thead>
@@ -33,22 +34,24 @@
             </tr>
         </tbody>
     </table>
+    <!-- tag::1[] -->
+    <!-- tag::2[] -->
     <h2>My Cart</h2>
     <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Quantity</th>
-            </tr>
-        </thead>
+        <thead><tr><th>Id</th><th>Name</th><th>Quantity</th></tr></thead>
         <tbody>
-            <tr th:each="cartItem : ${cart.cartItems}">
-                <td th:text="${cartItem.item.id}"></td>
-                <td th:text="${cartItem.item.name}"></td>
-                <td th:text="${cartItem.quantity}"></td>
-            </tr>
+        <tr th:each="cartItem : ${cart.cartItems}">
+            <td th:text="${cartItem.item.id}"></td>
+            <td th:text="${cartItem.item.name}"></td>
+            <td th:text="${cartItem.quantity}"></td>
+            <td>
+                <form th:method="delete" th:action="@{'/remove/' + ${cartItem.item.id}}">
+                    <input type="submit" value="-1"/>
+                </form>
+            </td>
+        </tr>
         </tbody>
     </table>
+    <!-- end::2[] -->
 </body>
 </html>
