--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,7 +27,7 @@
                     </form>
                 </td>
                 <td>
-                    <form th:method="delte" th:action="@{'/delete/' + ${item.id}}">
+                    <form th:method="delete" th:action="@{'/delete/' + ${item.id}}">
                         <input type="submit" value="Delete"/>
                     </form>
                 </td>
